--- a/explorerv2/html/bootstrap/css/bootstrap-theme.css
+++ b/explorerv2/html/bootstrap/css/bootstrap-theme.css
@@ -74,14 +74,16 @@
   background-image: none;
 }
 .btn-primary {
-  background-image: -webkit-linear-gradient(top, #8d2d9e 0%, #621f6e 100%);
-  background-image: -o-linear-gradient(top, #8d2d9e 0%, #621f6e 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#8d2d9e), to(#621f6e));
-  background-image: linear-gradient(to bottom, #8d2d9e 0%, #621f6e 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8d2d9e', endColorstr='#ff621f6e', GradientType=0);
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #e0e0e0 100%);
+  background-image: -o-linear-gradient(top, #ffffff 0%, #e0e0e0 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e0e0e0));
+  background-image: linear-gradient(to bottom, #ffffff 0%, #e0e0e0 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #5b1d66;
+  border-color: #dbdbdb;
+  text-shadow: 0 1px 0 #fff;
+  border-color: #ccc;
 }
 .btn-primary:hover,
 .btn-primary:focus {
